sample/grpc/grpc_client/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: aws
spec:
  controller: ingress.k8s.aws/alb

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: app-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: aws
  rules:
    - host: sample-grpc-client.shshimamo.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sample-grpc-client-service
                port:
                  number: 80
